--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="/quantum-fortuna-predictive-ai/vite.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Cache Control -->
+    <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="expires" content="0">
+    <meta http-equiv="pragma" content="no-cache">
 
     <title>Quantum Fortuna™ v5.3 - Revolutionary Quantum Neural Network Predictions</title>
 
